# python-package-exercise-project-3-team-2

./: MANIFEST.in  Pipfile  README.md  func_exmaple.sh  pyproject.toml  test.sh
.github/workflows/: build.yaml
src/thisday/: __main__.py  thisday.py
tests/: input_test.py  test_thisday.py  thisday.py
