[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thisday"
description = "A package to get the data from onthisday.com."
version = "1.0.3"
authors = [
  { name="Anvi", email="@nyu.edu" },
  { name="Leo Xu", email="gx324@nyu.edu" },
  { name="Otis", email="@nyu.edu" },
  { name="Danilo Montes", email="dem9855@nyu.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-2"
"Repository" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-2.git"
"Bug Tracker" = "https://github.com/software-students-fall2022/python-package-exercise-project-3-team-2/issues"

[project.scripts]
thisday = "thisday.__main__:main"